# caf-playground

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.caf  README.md  run-locally.sh
cmake/: FindCAF.cmake  FindCAF_local.cmake  platform-detect.cmake
notebooks/: delegating-work.ipynb  hello-caf.ipynb  monitoring-actors.ipynb  polymorphic-actors.ipynb  ref-of-cls-actors.ipynb  request-await.ipynb  request-then.ipynb  testing.ipynb
samples/: CMakeLists.txt
samples/src/: delegating-work.cc  hello-caf.cc  monitoring-actors.cc  passing-ref-to-other-actor.cc  polymorphic-actors.cc  quit-from-separate-thread.cc  ref-of-cls-actors.cc  request-await.cc  request-then.cc  self-quiting-actor.cc  self-quiting-and-destruction.cc  testing-caf.cc
