cmake_minimum_required(VERSION 3.2)

project (CAF_Playground C CXX)

set_property (GLOBAL PROPERTY USE_FOLDERS ON)

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_STANDARD_REQUIRED ON)

include(GNUInstallDirs)
include(cmake/platform-detect.cmake)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

if(NOT EXISTS $ENV{CAF_LOCAL_COMPILE_ROOT})
    find_package(CAF COMPONENTS core io REQUIRED)
else()      
    find_package(CAF_local REQUIRED)
endif()

# set the target
add_library(caf::caf INTERFACE IMPORTED)
set_property(TARGET caf::caf PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CAF_INCLUDE_DIRS})
set_property(TARGET caf::caf PROPERTY INTERFACE_LINK_LIBRARIES ${CAF_LIBRARIES})    

add_subdirectory (samples)

enable_testing()